Copy/Paste an empty across Blender Instances Hangs #34534

Closed
opened 2013-03-05 08:22:58 +01:00 by Kevin He · 4 comments

%%%--- Operating System, Graphics card ---

Windows 7
- Blender version with error, and version that worked ---

2.66
- Short description of error ---
Copy/Paste a complex hierarchical empty hangs the UI

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Select the "Player" empty from the attached .blend, mouse over to the editor window, press CTRL+C to copy the selection to buffer. It will hang.
%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- 2.66 - Short description of error --- Copy/Paste a complex hierarchical empty hangs the UI - Steps for others to reproduce the error (preferably based on attached .blend file) --- Select the "Player" empty from the attached .blend, mouse over to the editor window, press CTRL+C to copy the selection to buffer. It will hang. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Will investigate it.%%%

%%%Will investigate it.%%%
Member

%%%Fix goes to svn, thanks for finding this! It was entering an eternal loop yes.

Note that because of all linkage, constraints etc etc, the pasted result inserts the complete scene with nearly everything.
It uses the same functionality as an append from file.%%%

%%%Fix goes to svn, thanks for finding this! It was entering an eternal loop yes. Note that because of all linkage, constraints etc etc, the pasted result inserts the complete scene with nearly everything. It uses the same functionality as an append from file.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34534
No description provided.